sql remote changes till 6

--- a/database.env
+++ b/database.env
@@ -1,5 +1,5 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=1234
-DB_DATABASE=project
+DB_HOST= sql3.freemysqlhosting.net
+DB_USER= sql3669667
+DB_PASSWORD= 2SAFldAd5x
+DB_DATABASE= project
 DB_PORT=3306
